--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">COME UP WITH A NAME</a>
+  <a class="navbar-brand" href="#">COME UP WITH A NAME!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
