--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="speechtotext.css">
+  <link rel="stylesheet" href="Footer-with-social-icons.css">
+   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <title>My Web App</title>
 </head>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">COME UP WITH A NAME!</a>
+  <a class="navbar-brand" href="#">iCane</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,19 +36,126 @@
   </div>
 </nav>
 
-<!-- Alert -->
-<div class="alert alert-danger" role="alert">
-  <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+<!-- <div class="pop">
+  <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+    Popover on top
+  </button>
+</div> -->
+
+<div class="heading">
+  <h1>Welcome to iCane</h1>
 </div>
 
-<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-  Popover on top
-</button>
+<!-- Map -->
+<div id="map" style="width:80%;height:400px;background:yellow;display:block;margin:auto;margin-top:30px;margin-bottom:20px;"></div>
 
-Test
+<!-- Text to Speech -->
+<div id="speech-to-text">
+  <div id="page-wrapper">
+  <h1>Points of Interest</h1>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/js/bootstrap.bundle.min.js"></script>
+  <p id="msg"></p>
+
+  <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+
+	<div class="option">
+		<label for="voice">Voice</label>
+		<select name="voice" id="voice"></select>
+	</div>
+	<div class="option">
+		<label for="volume">Volume</label>
+		<input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
+	</div>
+	<div class="option">
+		<label for="rate">Rate</label>
+		<input type="range" min="0.1" max="10" step="0.1" name="rate" id="rate" value="1">
+	</div>
+	<div class="option">
+		<label for="pitch">Pitch</label>
+		<input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
+	</div>
+
+	<button id="speak">Speak</button>
+<!--
+  <div class="row">
+    <div class="col-md-6">
+      <button id="info" href="">Info</button>
+    </div>
+    <div class="col-md-6">
+      <button id="restroom">Restroom</button>
+    </div>
+  </div>
+ -->
+  </div>
+</div>
+
+<!-- Footer -->
+<footer id="myFooter">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 myCols">
+        <h5>Our Team</h5>
+        <ul>
+          <li>Ammar Al-Kahfah</li>
+          <li>Ali Sharaf</li>
+          <li>Victor Lourng</li>
+          <li>Gregory Kofman</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="social-networks">
+    <a href="https://twitter.com/DragonHacksIEEE" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.facebook.com/events/1651794458197007/" target="_blank" class="facebook"><i class="fa fa-facebook-official"></i></a>
+  </div>
+  <div class="footer-copyright">
+    <p>© 2018 Copyright DragonHacks </p>
+  </div>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- Google Map Scripts -->
+<!-- API KEY: AIzaSyCwsgt4H1TnyCxRx0hirV5tOJrfbAntlTI -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwsgt4H1TnyCxRx0hirV5tOJrfbAntlTI&callback=myMap"></script> -->
+<script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 39.955112, lng: -75.187941},
+          zoom: 19
+        });
+
+        var infoMarker = new google.maps.Marker({
+          position: {lat: 39.955112, lng: -75.187641},
+          map: map,
+          title: 'Information Desk'
+        });
+
+        var restroomMarker = new google.maps.Marker({
+          position: {lat: 39.955152, lng: -75.1882},
+          map: map,
+          title: 'Restroom'
+        });
+
+        infoMarker.addListener('click', function() {
+          speak("This is the information desk.");
+        });
+
+        restroomMarker.addListener('click', function() {
+          speak("This is a restroom.");
+        });
+      }
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM0IACb9WQcWcA2wVvDgdMCwPs58vYNEU&callback=initMap"
+    async defer></script>
+
+<!-- Speech to Text Script -->
+<script src="speechtotextscript.js"></script>
+
+<!-- More Scripts  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/js/bootstrap.bundle.min.js"></script>
 
 <script>
 $(function () {
